fix (style): z-index footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -82,6 +82,7 @@ footer {
   background-color: grey;
   padding-left: 45px;
   padding-right: 45px;
+  z-index: 60;
 
   a {
     color: lightgrey;
